[package]
name = "liquid_filters"
version = "0.1.0"
edition = "2021"
authors = ["Cibin George <ciibin@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[build-dependencies]
phf = { version = "0.11.1", default-features = false }
phf_codegen = "0.11.1"
serde_json = "1.0"

[dependencies]
liquid = { git = "https://github.com/cibingeorge/liquid-rust" }
liquid-core = { git = "https://github.com/cibingeorge/liquid-rust" }
liquid-lib = { git = "https://github.com/cibingeorge/liquid-rust" }
rb_date_parser = {git = "https://github.com/cibingeorge/rb_date_parser" }
chrono = {version = "0.4", features = ["clock"]}
chrono-tz = "0.9.0"
ring = "0.17.8"
magnus = { version = "0.6" }
serde_json = "1.0"
base64 = "0.22.1"
data-encoding = "2.6.0"
stringcase = "0.2.1"
textwrap = "0.16.1"
phf = { version = "0.11.1", default-features = false, features = ["macros"] }
currency_rs = "1.3.0"
regex = "1.10.5"
fancy-regex = "0.13.0"
num-format = "0.4.4"
md-5 = "0.10.6"
aes = "0.8.4"
ecb = { version = "0.1.2", features = ["std"] }
cbc = { version = "0.1.2", features = ["std"] }
hex-literal = "0.4.1"
hex = "0.4.3"
cruet = "0.14.0"
bigdecimal = "0.4.5"
lazy_static = "1.4.0"
rand = "0.8.5"
thiserror = "1.0.61"
nex = "0.15.0"
itertools = "0.13.0"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde = { version = "1.0.204", features = ["derive"] }
typetag = "0.2.17"
url = "2.5.2"
percent-encoding = "2.3.1"
cadence-macros = "1.4.0"
cadence = "1.4.0"
moka = { version = "0.12.8", features = ["future", "sync"] }

